<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Rent-Sciò</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this prototype.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="accedi_o_registrati">Accedi o Registrati</string>
    <string name="logo_applicazione">Logo Applicazione</string>
    <string name="accedi">Accedi</string>
    <string name="registrati_startup">Registrati</string>
    <string name="Accedi">Button</string>
    <string name="password_register">Password</string>
    <string name="email_login">Email</string>
    <string name="commerciante">Commerciante</string>
    <string name="partita_iva">Partita IVA</string>
    <string name="registrati_confirm">Registrati</string>
    <string name="cognome">Cognome</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="password_login">Password</string>
    <string name="data_di_nascita">Data di Nascita</string>
    <string name="phone">Phone</string>
    <string name="cliente">Cliente</string>
    <string name="title_activity_maps_trader">Map</string>
    <string name="edit_message">Inserisci la tua mail e la password</string>
    <string name="hai_gi_un_account_accedi">Hai già un account? Accedi</string>
    <string name="inserisci_la_tua_mail_e_la_password">Inserisci la tua mail e la password</string>
    <string name="collegamento1">Collegamento1</string>
    <string name="ottieni_la_tua_posisizione">Ottieni la tua posisizione</string>
    <string name="benvenuto_in">Benvenuto in</string>
    <string name="rent_sci">RENT-SCIÒ</string>
    <string name="inserisci_la_tua_mail_e_la_password_per_poter_accedere_ai_servizi_di_rent_sci">Inserisci la tua mail e la password per poter accedere ai servizi di RENT-SCIÒ</string>
    <string name="textview">TextView</string>
    <string name="ottieni_la_tua_posizione">Ottieni la tua posizione</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="assistenzaBtn">assistenza</string>
    <string name="visualizza_parco_mezzi">Visualizza parco mezzi</string>
    <string name="nuova_corsa">Nuova corsa</string>
    <string name="logout">Logout</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="inserisci_la_tua_email_e_la_password">Inserisci la tua email e la password</string>
    <string name="benvenuto_in_rent_sci">Benvenuto in RENT-SCIÒ</string>
    <string name="tipo_veicolo">Tipo veicolo</string>
    <string name="id">ID</string>
    <string name="veicolo">Veicolo</string>
    <string name="disponibilit">Disponibilità</string>
    <string name="posti_a_sedere">Posti a sedere</string>
    <string name="posti">Posti</string>
    <string name="qui_puoi_vedere_i_tuoi_mezzi_tocca_il_pulsante_nuovo_per_aggiungere_un_veicolo_al_tuo_negozio_oppure_tocca_elimina_se_vuoi_levarlo_definitivamente">Qui puoi vedere i tuoi mezzi. Tocca il pulsante Nuovo per aggiungere un veicolo al tuo negozio. Oppure tocca Elimina se vuoi levarlo definitivamente.</string>
    <string name="elimina_veicolo">ELIMINA VEICOLO</string>
    <string name="aggiungi_veicolo">AGGIUNGI VEICOLO</string>
    <string name="elimina">Elimina</string>
    <string name="nuovo" />
    <string name="seleziona_il_tipo_di_veicolo_e_la_quantit_di_posti_a_sedere_presenti">Seleziona il tipo di veicolo e la quantità di posti a sedere presenti.</string>
    <string name="conferma">Conferma</string>
    <string name="per_poter_rimuovere_un_veicolo_clicca_seleziona_un_veicolo_e_poi_seleziona_il_mezzo_da_rimuovere">Per poter iniziare una nuova corsa clicca <u><i>Seleziona un veicolo</i></u>. Seleziona il mezzo con cui far partire il noleggio e infine <u><i>Conferma</i></u>.</string>
    <string name="ops_la_tua_tabella_vuota_prima_di_avviare_una_nuova_corsa_assicurati_di_avere_almeno_un_veicolo_disponibile">Ops… La tua tabella è vuota. Prima di avviare una nuova corsa assicurati di avere almeno un veicolo disponibile!</string>
    <string name="conferma_eliminazione_tabella">CONFERMA</string>
    <string name="registrati">REGISTRATI</string>
    <string name="imposta_area_limitata">Imposta area limitata</string>
    <string name="elimina_ultimo_mark">Elimina ultimo mark</string>
    <string name="pulisci_area">Pulisci area</string>
    <string name="elimina_l_ultimo">Elimina l\'ultimo</string>
    <string name="conferma_modifiche">Conferma modifiche</string>
    <string name="nome_negozio">Nome Negozio</string>
    <string name="registrati_">Registrati</string>
    <string name="conferma_password">Conferma password</string>
    <string name="seleziona_un_veicolo">- Seleziona un veicolo</string>
    <string name="seleziona_un_veicolo_">Seleziona un veicolo</string>
    <string name="clicca_seleziona_un_veicolo">Clicca <i>Seleziona un veicolo</i></string>
    <string name="una_volta_scelto_il_mezzo_conferma">Una volta scelto il mezzo, conferma!</string>
    <string name="personalizza_il_tuo_veicolo">Personalizza il tuo veicolo</string>
    <string name="personalizza_il_tuo_veicolo_">Personalizza il tuo veicolo!</string>
    <string name="ramma">RAMMA</string>
    <string name="corse_attive">Corse attive</string>
    <string name="tempo_rimasto">Tempo rimasto</string>
    <string name="assistenza">Assistenza</string>
    <string name="ritorno_al_negozio">Ritorno al negozio</string>
    <string name="non_ci_sono_corse_attive_al_momento" tools:ignore="Typos">Non ci sono corse attive al momento.</string>
    <string name="rimasti">Rimasti</string>
    <string name="elimina_corsa_trader_table">Elimina</string>
    <string name="elimina___">Elimina</string>
    <string name="tipo_veicolo_max_15_caratteri">Tipo veicolo (max. 15 caratteri)</string>
    <string name="imposta_la_durata_del_noleggio_e_poi_clicca_seleziona_un_veicolo">Imposta la durata del noleggio e poi clicca Seleziona un veicolo</string>
    <string name="ore">Ore</string>
    <string name="minuti">Minuti</string>
    <string name="tutorial_utilizzo_area_limitata">Tutorial utilizzo Area Limitata</string>
    <string name="delimitedAreaChannel">Uscita dall\'area limitata</string>
    <string name="delimitedAreaChannelD">Avvisa l\'utente dell\'uscita dall\'area limitata</string>
    <string name="pulisci_tutto">pulisci tutto</string>
    <string name="fragment_per_il_costruisci">Fragment per il costruisci</string>
    <string name="fragment_per_elimina_ultimo">Fragment per elimina ultimo</string>
    <string name="fragment_elimina_tutto">Fragment elimina tutto</string>
    <string name="fragment_per_il_conferma">Fragment per il conferma</string>
    <string name="per_costruire_la_tua_area_limitata_assicurati_di_vedere_il_tuo_negozio_come_nell_immagine_sottostante">Per costruire la tua area limitata assicurati di vedere il tuo negozio come nell\'immagine sottostante.</string>
    <string name="per_costruire_la_tua_area_limitata_assicurati_di_vedere_il_tuo_negozio_sulla_mappa">Per costruire la tua area limitata, assicurati di vedere il tuo negozio sulla mappa.</string>
    <string name="ora_tocca_sullo_schermo_per_piazzare_dei_marker_attorno_al_tuo_negozio">Ora tocca sullo schermo per piazzare dei marker attorno al tuo negozio.</string>
    <string name="una_volta_creati_i_marker_attorno_al_tuo_negozio_premi_costruisci_e_la_zona_selezionata_si_colorer">Una volta creati i marker attorno al tuo negozio, premi <b><u><i>Costruisci</i></u></b> e la zona selezionata si colorerà.</string>
    <string name="nota_bene_che_per_poter_disegnare_l_area_devono_esserci_minimo_3_marker_escluso_avatar_del_tuo_negozio">Nota bene: Per poter disegnare l\'area devono esserci minimo 3 marker, ESCLUSO l\'avatar del tuo negozio!</string>
    <string name="se_vuoi_eliminare_l_ultimo_marker_inserito_dovrai_farlo_prima_di_aver_premuto_il_tasto_costruisci">Se vuoi eliminare l\'ultimo marker inserito, dovrai farlo prima di aver premuto il tasto <b><u><i>Costruisci</i></u></b>.</string>
    <string name="se_hai_gi_premuto_il_tasto_costruisci_e_vuoi_eliminare_l_ultimo_marker_dovrai_eliminare_l_intera_area_e_ricostruirla_da_capo">Se hai già premuto il tasto <b><u><i>Costruisci</i></u></b> e vuoi eliminare l\'ultimo marker, dovrai eliminare l\'intera area e ricostruirla da capo.</string>
    <string name="per_eliminare_l_ultimo_marker_inserito_baster_premere_il_tasto_elimina_ultimo" tools:ignore="Typos">È possibile eliminare un marker in due modi!</string>
    <string name="se_hai_gi_costruito_una_tua_area_e_hai_eliminato_un_marker_l_area_verr_ricalcolata_automaticamente_e_potrai_confermare_o_aggiungere_la_tua_scelta">1) Cliccando sopra un marker qualsiasi, comparirà il tasto <b><u><i>Elimina</i></u></b>. Premilo per eliminare quel marker.</string>
    <string name="secondo_modo_per_eliminare_i_marker">2) Premendo il tasto <b><u><i>Elimina ultimo</i></u></b> l\'ultimo marker inserito verrà eliminato.</string>
    <string name="nota_bene_che_se_la_zona_rimane_inclusa_fra_meno_di_3_marker_non_verr_disegnata_in_quanto_ne_occorrono_minimo_3">Nota bene: Se la zona rimane inclusa fra meno di 3 marker, non verrà disegnata in quanto ne occorrono minimo 3, <b>ESCLUSO</b> l\'avatar del tuo negozio.</string>
    <string name="premi_sul_tasto_pulisci_area_se_vuoi_eliminare_tutta_l_area_per_rifarla_da_capo">Premi sul tasto <b><u><i>Pulisci Area</i></u></b> se vuoi eliminare tutta l\'area per rifarla da capo.</string>
    <string name="rester_anche_dopo_la_cancellazione_il_marker_che_indica_il_tuo_negozio">Resterà, anche dopo la cancellazione dell\'area creata, l\'avatar che indica il tuo negozio.</string>
    <string name="puoi_spostare_e_quindi_modificare_la_tua_area_limitata_tenendo_premuto_un_marker_aspettando_qualche_secondo_e_trascinandolo_in_una_nuova_posizione_l_area_verr_ricalcolata_subito_dopo">Puoi spostare e quindi modificare la tua area limitata tenendo premuto un marker, aspettando qualche secondo e trascinandolo in una nuova posizione. L\'area verrà ricalcolata subito dopo.</string>
    <string name="se_hai_gi_confermato_un_area_precedente_e_vuoi_modificarla_ulteriormente_baster_tener_premuto_su_un_marker_e_spostarlo_nella_posizione_desiderata_poi_ripremere_conferma">Se hai già confermato un\'area precedente e vuoi modificarla ulteriormente, basterà tener premuto su un marker e spostarlo nella posizione desiderata, poi ripremere <b><u><i>Conferma</i></u></b>.</string>
    <string name="una_volta_premuto_il_tasto_conferma_ritornerai_alla_mappa_iniziale_con_l_area_limitata_impostata">Una volta premuto il tasto <b><u><i>Conferma</i></u></b>, ritornerai alla mappa iniziale con l\'area limitata impostata.</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="termina_corsa">Termina corsa</string>
    <string name="accedi_start">ACCEDI</string>
</resources>