<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".TabellaCorseTrader">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_trader_list"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:theme="@style/ToolbarTheme"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:titleTextColor="@color/back" />

    <TableLayout
        android:id="@+id/tabella_corse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:background="@drawable/border_tablelayout"
        android:gravity="center"
        android:paddingTop="0dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="@integer/viewfinder_border_width"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_trader_list"
        app:layout_constraintVertical_bias="0.101">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/comfortaa_regular"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:text="@string/cliente"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:fontFamily="@font/comfortaa_regular"
                android:gravity="center"
                android:text="@string/veicolo"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:fontFamily="@font/comfortaa_regular"
                android:gravity="center"
                android:text="@string/rimasti"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:fontFamily="@font/comfortaa_regular"
                android:text="@string/elimina_corsa_trader_table"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/corse_attive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textAlignment="center"
        android:fontFamily="@font/comfortaa_regular"
        android:textColor="@color/text"
        android:text="@string/non_ci_sono_corse_attive_al_momento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabella_corse"
        app:layout_constraintVertical_bias="0.182" />

</androidx.constraintlayout.widget.ConstraintLayout>