<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".Init.StartActivity"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="240dp"
        android:layout_height="180dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:src="@drawable/ic_logo_vettorizzato"
        app:layout_constraintBottom_toTopOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:fontFamily="@font/comfortaa_regular"
        android:text="@string/ramma"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="35sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/comfortaa_regular"
        android:gravity="center"
        android:text="@string/accedi_start"
        android:textColor="@color/back"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/comfortaa_regular"
        android:text="@string/registrati_startup"
        android:textColor="@color/back"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:fontFamily="@font/comfortaa_regular"
        android:padding="15dp"
        android:text="@string/benvenuto_in_rent_sci"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>