<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Trader.NewVehicleActivityTrader"
    android:background="@color/back"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_new_vehicle"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/back"
        android:theme="@style/ToolbarTheme"/>

    <EditText
        android:id="@+id/tipo_veicolo"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="236dp"
        android:backgroundTint="@color/text"
        android:ems="10"
        android:fontFamily="@font/comfortaa_regular"
        android:hint="@string/tipo_veicolo_max_15_caratteri"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:textColor="@color/teal_200"
        android:textColorHint="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/posti_a_sedere"
        android:layout_width="330dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/text"
        android:ems="10"
        android:fontFamily="@font/comfortaa_regular"
        android:hint="@string/posti_a_sedere"
        android:inputType="number"
        android:textColor="@color/teal_200"
        android:textColorHint="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipo_veicolo" />

    <Button
        android:id="@+id/Conferma"
        android:layout_width="267dp"
        android:layout_height="48dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/comfortaa_regular"
        android:text="@string/conferma"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:gravity="center"
        android:fontFamily="@font/comfortaa_regular"
        android:text="@string/personalizza_il_tuo_veicolo_"
        android:textColor="@color/text"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tipo_veicolo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_new_vehicle" />

    <EditText
        android:id="@+id/maxSpeed"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Velocità massima"
        app:layout_constraintBottom_toTopOf="@+id/Conferma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/posti_a_sedere" />

</androidx.constraintlayout.widget.ConstraintLayout>