<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    app:flow_firstHorizontalStyle="spread_inside"
    tools:context=".Trader.VehicleListActivityTrader">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_vehicle_list"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:menu="@menu/toolbar_new_vehicle_menu"
        app:autoSizeTextType="uniform"
        app:title="Tabella dei veicoli"
        app:titleTextColor="@color/text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/warning_empty_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_regular"
        android:text="@string/ops_la_tua_tabella_vuota_prima_di_avviare_una_nuova_corsa_assicurati_di_avere_almeno_un_veicolo_disponibile"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/toolbar_vehicle_list"
        app:layout_constraintTop_toBottomOf="@id/toolbar_vehicle_list"
        app:layout_constraintVertical_bias="0.2" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/toolbar_vehicle_list"
        app:layout_constraintTop_toBottomOf="@id/toolbar_vehicle_list"
        app:layout_constraintVertical_bias="0.0">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:id="@+id/tabella_veicoli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="28dp"
                android:background="@color/back"
                android:paddingBottom="20dp"
                android:textAlignment="center"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.379"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_vehicle_list"
                app:layout_constraintVertical_bias="0.0">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/comfortaa_regular"
                        android:gravity="center"
                        android:text="@string/veicolo"
                        android:textColor="@color/text"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:autoSizeTextType="uniform" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/comfortaa_regular"
                        android:gravity="center"
                        android:text="@string/posti"
                        android:textColor="@color/text"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:autoSizeTextType="uniform" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/comfortaa_regular"
                        android:gravity="center"
                        android:text="@string/disponibilit"
                        android:textColor="@color/text"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:autoSizeTextType="uniform" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/comfortaa_regular"
                        android:gravity="center"
                        android:text="@string/elimina___"
                        android:textColor="@color/text"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:autoSizeTextType="uniform" />
                </TableRow>

            </TableLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>